--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		
 		<div id="contactDetails" class="quickFade delayFour">
 			<ul>
-				<li><br>Email: <a href="mailto:joe@bloggs.com" target="_blank">swap460@gmail.com</a></li>
+				<li><br>Email: <a href="mailtoxbfbfshhh:joe@bloggs.com" target="_blank">swap460@gmail.com</a></li>
 				<li>Mob: 9028941092</li>
 			</ul>
 		</div>
