--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
 					<p class="subDetails">7th Mar 2015 - Present</p>
 					<p>Role in orgazization “Jr.Software Tester”<br>( 2 year experience in Manual Testing )</p>
 				</article>
+				<article>
+					<h2>Name of Organization “ LogicSoft India” Pune</h2>
+					<p class="subDetails">7th Mar 2015 - Present</p>
+					<p>Role in orgazization “Jr.Software Tester”<br>( 2 year experience in Manual Testing )</p>
+				</article>
 			</div>
 			<div class="clear"></div>
 		</section>
