--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
 			
 			<div class="sectionContent">
 				<article>
-					<h2>Name of Organization “ LogicSoft India” Pune</h2>
-					<p class="subDetails">7th Mar 2015 - Present</p>
-					<p>Role in orgazization “Jr.Software Tester”<br>( 2 year experience in Manual Testing )</p>
+					<h2>LogicSoft India Pune</h2>
+					<p class="subDetails">7th Mar 2015 - 31st Dec 2016</p>
+					<p>Role in orgazization “Software Tester”</p>
 				</article>
 				<article>
-					<h2>Name of Organization “ LogicSoft India” Pune</h2>
-					<p class="subDetails">7th Mar 2015 - Present</p>
-					<p>Role in orgazization “Jr.Software Tester”<br>( 2 year experience in Manual Testing )</p>
+					<h2>Weppsol Technologies Pune</h2>
+					<p class="subDetails">1st Jan 2017 - Present</p>
+					<p>Role in orgazization “Software Tester”</p>
 				</article>
 			</div>
 			<div class="clear"></div>
